# fcgid

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  client.php  conf.json  fcgi.c  fcgi_header.c
include/: fcgi_header.h
src/: CMakeLists.txt  fcgi.c  fcgi.h  fcgi_defs.h  fcgi_header.c  fcgi_header.h  main.c
